--- a/PHOEBE.html
+++ b/PHOEBE.html
@@ -4,57 +4,48 @@
 	<head>
 		<!--Title of the page-->
 		<title>Joel Phoebe CV</title>
+		<link rel="stylesheet" type="text/css" href="main.css"/>
 	</head>
  
 	<body>
-		<!--First heading = my name-->
-			<h1 align="center"><strong>JOEL, Phoebe Olorunseunfunmi          </strong><img src="https://res.cloudinary.com/phoebe1/image/upload/v1566569105/papic2edited_eczv8q.jpg" alt="Passport"/></h1>
-		<!--2nd heading and table for contact details-->
-				<div>
-					<h2>Contact Details</h2>
-					<hr/>
-						<table>
-							<tr>
-								<td>Phone Number</td>
-								<td>08130869078</td>
-							</tr>
-							<tr>
-								<td>Email Address</td>
-								<td><a href="mailto:ojoelphoebe@yahoo.com">ojoelphoebe@yahoo.com</a></td>
-							</tr>
-							<tr>
-								<td>LinkedIn</td>
-								<td><a href="https://www.linkedin.com/in/joel-phoebe-olorunseunfunmi-41b4b6125" target="_blank">www.linkedin.com/joel-phoebe-olorunseunfunmi</a></td>
-							</tr>
-							<tr>
-								<td>Home</td>
-								<td>69, Old Yaba road, Lagos</td>
-							</tr>
-						</table>
-				</div>
+		<!--First section = name and contact details section-->
+		<div>	
+			<img src="https://res.cloudinary.com/phoebe1/image/upload/v1566569105/papic2edited_eczv8q.jpg" alt="Passport" class="passport" />
+			<h1 class="name"><strong>JOEL, Phoebe Olorunseunfunmi</strong></h1>
+			<table class="contactdetails" width="50%">
+				<tr>
+					<td class="column1">08130869078</td>
+					<td class="column2"><a href="https://www.linkedin.com/in/joel-phoebe-olorunseunfunmi-41b4b6125" target="_blank">www.linkedin.com/joel-phoebe-olorunseunfunmi</a></td>
+				</tr>
+				<tr>
+					<td class="column1"><a href="mailto:ojoelphoebe@yahoo.com">ojoelphoebe@yahoo.com</a></td>
+					<td class="column2">69, Old Yaba road, Lagos</td>
+				</tr>
+			</table>
+		</div>
+		<hr>
     <!--next section for education; table with 1 row and 2 columns for school name and year, with year aligned to the left-->
 				<div>
       				<h2>Education</h2>
       				<hr/>
-						<table>
+						<table width=100%>
 	  						<tr>
 	    						<td>University of Ibadan</td>
-	    						<td align="right">Jan 2013 - Jan 2018</td>
+	    						<td class="column2">Jan 2013 - Jan 2018</td>
 	  						</tr>
 						</table>
-    						<p>BSc. Petroleum Engineering (First Class Honors)</p>
-	  						<p>Relevant Courses: Engineering Economics, Engineering Management, Computer Applications of Petroleum Engineering, Petroleum Production and Operations, Field Development Planning, Reservoir Engineering, Drilling Engineering, Production Engineering</p>
+    						<br><strong>BSc. Petroleum Engineering (First Class Honors)</strong>
+    						<br>Relevant Courses: Engineering Economics, Engineering Management, Computer Applications of Petroleum Engineering, Petroleum Production and Operations, Field Development Planning, Reservoir Engineering, Drilling Engineering, Production Engineering
     			</div>
-
+    	<hr>
     <!--next section for work; table with 1 row and 3 columns and date aligned to the right with job roles as unordered list-->
     			<div>
       				<h2>Work Experience</h2>
       				<hr/>
-						<table>
+						<table width =100%>
 	  						<tr>
-							    <td>Jumia Mall</td>
-							    <td align="left">|Junior Analyst, SEO|</td>
-							    <td align="right">March 2019 - Present</td>
+							    <td><strong>Jumia Mall</strong> |Junior Analyst, SEO |</td>
+							    <td class="column2">March 2019 - Present</td>
 	  						</tr>
 						</table>
 								<ul>
@@ -64,11 +55,10 @@
 							    	<li>Developing and implementing link building campaigns, perform back link analysis, opportunity identification, solicitation and optimization</li>
 							  	</ul>
 
-						<table>
+						<table width=100%>
 							<tr>
-							   	<td>OTA Total Academy</td>
-							    <td align="left">|Mathematics Teacher|</td>
-							    <td align="right">August 2018 - February 2019</td>
+							   	<td><strong>OTA Total Academy</strong> |Mathematics Teacher |</td>
+							   	<td class="column2">August 2018 - February 2019</td>
 							</tr>
 						</table>
 							<ul>
@@ -77,11 +67,10 @@
 								<li>Engaged in teacher-student mentoring to impact an overall difference to the future of the students</li>
 							</ul>
 
-						<table>
+						<table width="100%">
 							<tr>
-								<td>Oando Energy Resources</td>
-								<td align="left">|Geosciences Intern|</td>
-								<td align="right">November 2016 - February 2017</td>
+								<td><strong>Oando Energy Resources</strong> |Geosciences Intern |</td>
+								<td class="column2">November 2016 - February 2017</td>
 							</tr>
 						</table>
 							<ul>
@@ -90,71 +79,89 @@
 							    <li>Used MBAL for reservoir production analysis and prediction of OML 61</li>
 							</ul>
 				</div>
-
+			<hr>
 <!--next section for leadership experience; table with 3 row and 3 columns -->
 				<div>
 				    <h2>Leadership Experience</h2>
 				    <hr/>
-						<table>
+						<table width="100%">
 							<tr>
-							   	<td><strong>President |</strong></td>
-								<td>Project Partnership Club (PPC) |</td>
-							    <td align="right">Jan 2016 – Jan 2018</td>
+							   	<td><strong>President</strong> |Project Partnership Club (PPC) |</td>
+							    <td class="column2">Jan 2016 – Jan 2018</td>
 							</tr>
 							<tr>
-							    <td><strong>Head |</strong></td>
-							    <td>Health, Safety and Environment (HSE) committee, Society of Petroleum Engineers, University of Ibadan chapter |</td>
-							    <td align="right">Feb 2017 – Jan 2018</td>
+							    <td><strong>Head</strong> |Health, Safety and Environment (HSE) committee, Society of Petroleum Engineers, University of Ibadan chapter |</td>
+							    <td class="column2">Feb 2017 – Jan 2018</td>
 							</tr>
 							<tr>
-							    <td><strong>Public Relations Officer |</strong></td>
-							    <td>Technology and Engineering Students Association, University of Ibadan |</td>
-							    <td align="right">July 2015 – April 2016</td>
+							    <td><strong>Public Relations Officer</strong> |Technology and Engineering Students Association, University of Ibadan |</td>
+							    <td class="column2">July 2015 – April 2016</td>
 							</tr>
 						</table>
 				</div>	
-
+				<hr>
 <!--Volunteer activities: table with 3 rows, 3 columns-->
 				<div>
 				    <h2>Volunteer Activities</h2>
 				    <hr/>
-						<table>
+						<table width="100%">
 						  	<tr>
-						    	<td><strong>Content and Design Creator |</strong></td>
-						    	<td>TEDxAPATA 2018 (PPC) |</td>
-						    	<td align="right">June 2018-Nov 2018</td>
+						    	<td>Content and Design Creator |<strong>TEDxAPATA 2018 (PPC) |</strong></td>
+						    	<td class="column2">June 2018-Nov 2018</td>
 						  	</tr>
 						  	<tr>
-						    	<td><strong>Charity and fund-raising committee |</strong></td>
-						    	<td>Queen Idia Hall HARMONICA 2017 |</td>
-						    	<td align="right">April 2017 – Dec 2017</td>
+						    	<td>Charity and fund-raising committee |<strong>Queen Idia Hall HARMONICA 2017 |</strong></td>
+						    	<td class="column2">April 2017 – Dec 2017</td>
 						  	</tr>
 						  	<tr>
-						    	<td><strong>Student mentor |</strong></td>
-						    	<td>Society of Petroleum Engineers University of Ibadan chapter</td>
-						    	<td align="right">March 2016 - Jan 2018</td>
+						    	<td>Student mentor |<strong>Society of Petroleum Engineers University of Ibadan chapter |</strong></td>
+						    	<td class="column2">March 2016 - Jan 2018</td>
 						  	</tr>
 						</table>
 				</div>
+				<hr>
 <!--Additional info: Tables with 4 rows and 2 columns-->
 				<div>    
 				    <h2>Additional Information</h2>
 				    <hr/>
-						<table>
+						<table width="100%">
 					  		<tr>
-					    		<td><strong>Skills: </strong></td>
-						    	<td>Knowledge in use of Microsoft Excel for Business Analytics, Office Suite, MBAL, TECHLOG</td>
+					    		<td><strong>Technical Skills: </strong></td>
+					    		<td><strong>Special skills: </strong></td>
 						  	</tr>
 						  	<tr>
-						    	<td><strong>Special skills: </strong></td>
-						    	<td>Teamwork and organization, Problem solving, Content creation skills, Leadership skills, Innovative and Analytical thinking</td>
+						    	<td>Knowledge in use of 
+						    		<ul>
+						    			<li>Microsoft Excel for Business Analytics	<em>-basic</em></li>
+						    			<li>Microsoft Office Suite	<em>-intermediate</em></li>
+						    			<li>MBAL	<em>-basic</em></li>
+						    			<li>Techlog 	<em>-intermediate</em></li>
+						    			<li>HTML and CSS 	<em>-basic</em></li>
+						    			<li>Python programming language	<em>-basic</em></li>
+						    		</ul>
+						    	</td>
+						    	<td>
+						    		<ul>
+						    			<li>Teamwork and organization</li>
+						    			<li>Problem solving</li>
+						    			<li>Content creation skills</li>
+						    			<li>Leadership skills</li>
+						    			<li>Innovative and Analytical thinking</li>
+						    		</ul>
+						    	</td>
 						  	</tr>
 						  	<tr>
 						    	<td><strong>Certifications | awards: </strong></td>
-						    	<td>HSE level 1&2 | Dean’s Outstanding Students’ Honor List 2013 – 2016</td>
+						    	<td><strong>Conferences: </strong></td>
 						  	</tr>
 						  	<tr>
-						    	<td><strong>Conferences: </strong></td>
+						  		<td>
+						    		<ul>
+						    			<li>HSE level 1&2</li>
+						    			<li>DataCamp Python for Data Science certificate	<em>-In View</em></li>
+						    			<li>Dean’s Outstanding Students’ Honor List 2013 – 2016</li>
+						    		</ul>
+						    	</td>
 						    	<td>Paper presentation and award collection at the Annual Technical Conference and Exhibition (ATCE), Dubai– September 2016</td>
 						  	</tr>
 						</table>
